--- a/ecomfrontend/src/styles.css
+++ b/ecomfrontend/src/styles.css
@@ -73,7 +73,7 @@
 .jumbotron {
     height: 180px;
     color: #fff;
-    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background: #4b4848;
     background-size: 400% 400%;
     -webkit-animation: Gradient 15s ease infinite;
     -moz-animation: Gradient 15s ease infinite;
